--- a/blog.html
+++ b/blog.html
@@ -224,7 +224,6 @@
 
     <!-- Footer section  -->
 
-
     <footer class="bg-black text-white">
       <div class="flex p-5 justify-between">
         <div
@@ -244,7 +243,6 @@
               <div>Give life to an animal in need</div>
             </div>
           </div>
-
         </div>
 
         <!-- Subscribe column -->
@@ -387,20 +385,19 @@
         }
       }
 
-
       // When the user clicks on the button, scroll to the top of the document
       function topFunction() {
         document.body.scrollTop = 0;
         document.documentElement.scrollTop = 0;
       }
-    
-    // This script was added to make the footer LOGO scroll to top
-  function scrollToTop() {
-  window.scrollTo({
-    top: 0,
-    behavior: "smooth"
-  });
-  }
+
+      // This script was added to make the footer LOGO scroll to top
+      function scrollToTop() {
+        window.scrollTo({
+          top: 0,
+          behavior: "smooth",
+        });
+      }
     </script>
 
     <script src="index.js"></script>
@@ -409,4 +406,3 @@
     <script src="navbar.js"></script>
   </body>
 </html>
-
