--- a/reportstary.html
+++ b/reportstary.html
@@ -240,17 +240,22 @@
 
     </form>
   </div>
-  <button class="help_btn">Help</button>
+  <button class="help_btn bg-amber-900 hover:bg-yellow-900">Help</button>
 
-  <dialog id="popup" class="popup" style="display:none">
-        <div class="Head">
-          <h1 class="Head_text">Get Help</h1>
-          <button id="close" aria-label="close" formnovalidate>X</button>
+  <dialog id="popup" class="popup border-2 border-green-500" style="display:none">
+    <div class="bg-white rounded-lg p-6 max-w-md">
+        <div class="Head text-center">
+            <h1 class="Head_text text-2xl font-semibold text-green-600">Get Help</h1>
+            <button id="close" aria-label="close" formnovalidate class="text-gray-600 hover:text-gray-800 focus:outline-none absolute top-2 right-4">X</button>
         </div>
-        <h2 class="subHead">search a city name and find pet care centers there</h2>
-        <input placeholder="Get info of Pet Clinics" type="text" id="input" name="input" onkeydown="if (event.keyCode === 13) document.getElementById('myButton').click()">
-        <button id="GoButton">Go</button>
-  </dialog>
+        <h2 class="subHead text-xl italic font-light text-gray-600 mt-4">Search a city name and find pet care centers there</h2>
+        <input placeholder="Get info of Pet Clinics" type="text" id="input" name="input"
+            class="rounded-full p-2 border border-gray-300 w-full max-w-md mx-auto my-6">
+        <button id="GoButton" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-full focus:outline-none mx-auto">Go</button>
+    </div>
+</dialog>
+
+
 
   <script src="./navbar.js"></script>
   <script src="./light-dark-theme.js"></script>
