--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
               <a
                 href="#meet"
                 class="lg:p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
-                style=""
                 >Meet Pets</a
               >
             </li>
@@ -126,7 +125,7 @@
               >
                 <a
                   @mouseover="open = true"
-                  class="text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover navbar-item w-full"
+                  class="text-custom-heading flex font-bold hover:underline hover:cursor-pointer underline-offset-4 turn-red-hover navbar-item w-full"
                 >
                   Support Us
                   <svg
