Fix : Visibility of Adopt me text in light mode

--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
               <a
                 href="#meet"
                 class="lg:p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
-                style=""
                 >Meet Pets</a
               >
             </li>
@@ -327,7 +326,9 @@
                 </li>
               </ul>
               <a class="self-center pt-2" href="adopt.html">
-                <button type="button" class="hover-button">Adopt me</button></a
+                <button type="button" class="hover-button text_5">
+                  Adopt me
+                </button></a
               >
             </div>
           </div>
@@ -376,7 +377,9 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button">Adopt me</button></a
+                <button type="button" class="hover-button text_5">
+                  Adopt me
+                </button></a
               >
             </div>
           </div>
@@ -431,7 +434,9 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button">Adopt me</button></a
+                <button type="button" class="hover-button text_5">
+                  Adopt me
+                </button></a
               >
             </div>
           </div>
@@ -484,7 +489,9 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button">Adopt me</button></a
+                <button type="button" class="hover-button text_5">
+                  Adopt me
+                </button></a
               >
             </div>
           </div>
@@ -539,7 +546,9 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button">Adopt me</button></a
+                <button type="button" class="hover-button text_5">
+                  Adopt me
+                </button></a
               >
             </div>
           </div>
@@ -592,7 +601,9 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button">Adopt me</button></a
+                <button type="button" class="hover-button text_5">
+                  Adopt me
+                </button></a
               >
             </div>
           </div>
@@ -647,7 +658,9 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button">Adopt me</button>
+                <button type="button" class="hover-button text_5">
+                  Adopt me
+                </button>
               </a>
             </div>
           </div>
@@ -700,7 +713,9 @@
                 </li>
               </ul>
               <a class="self-center" href="adopt.html">
-                <button type="button" class="hover-button">Adopt me</button>
+                <button type="button" class="hover-button text_5">
+                  Adopt me
+                </button>
               </a>
             </div>
           </div>
