--- a/index.html
+++ b/index.html
@@ -942,7 +942,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   width="40"
                   height="40"
-                  class="fill-white"
+                  class="fill-white facebook-icon"
                   viewBox="0 0 20 20"
                 >
                   <path
@@ -958,7 +958,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   width="40"
                   height="40"
-                  class="fill-white"
+                  class="instagram-icon"
                   viewBox="0 0 20 20"
                 >
                   <path
@@ -978,7 +978,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   width="40"
                   height="40"
-                  class="fill-white"
+                  class="github-icon"
                   viewBox="0 0 20 20"
                 >
                   <path
