--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
               class="bg-gray-800 hover:bg-gray-900 text-center text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
               type="submit"
             >
-              Contact Us
+              Submit
             </button>
           </div>
         </form>
