--- a/index.html
+++ b/index.html
@@ -106,10 +106,14 @@
             </li>
             
             <li>
-              <div x-data="{ open: false }" @mouseleave="open = false" class="relative">
+              <div
+                x-data="{ open: false }"
+                @mouseleave="open = false"
+                class="relative"
+              >
                 <a
                   @mouseover="open = true"
-                  class="text-custom-heading flex font-bold  underline-offset-4 turn-red-hover navbar-item w-full"
+                  class="text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover navbar-item w-full"
                 >
                   Support Us
                   <svg
@@ -129,8 +133,18 @@
                     ></path>
                   </svg>
                 </a>
+  
+                <div
+                  x-show="open"
+                  class="z-20 absolute -left-1 w-[7.5rem] py-2 bg-gray-100 rounded-md shadow-xl"
+                >
+                  <a
+                    href="volunteer.html"
+                    class="block px-4 py-2 text-sm text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white"
+                    >Become a Volunteer</a
+                  >
+                </div>
               </div>
-              
             </li>
             <li>
               <a
