Added cursor-pointer in "Support-Us" bottom #1798

--- a/index.html
+++ b/index.html
@@ -104,33 +104,12 @@
                 >Donate</a
               >
             </li>
-            
             <li>
-              <div x-data="{ open: false }" @mouseleave="open = false" class="relative">
-                <a
-                  @mouseover="open = true"
-                  class="text-custom-heading flex font-bold  underline-offset-4 turn-red-hover navbar-item w-full"
-                >
-                  Support Us
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="14px"
-                    height="14px"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke="currentColor"
-                    class="mt-1"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M19 9l-7 7-7-7"
-                    ></path>
-                  </svg>
-                </a>
-              </div>
-              
+              <a
+                href="./volunteer.html"
+                class="text-custom-heading font-bold  underline-offset-4 turn-red-hover navbar-item"
+                >Support Us</a
+              >
             </li>
             <li>
               <a
