--- a/news.html
+++ b/news.html
@@ -91,23 +91,11 @@
 							class="text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Donate</a>
 					</li>
 					<li>
-						<div x-data="{ open: false }" @mouseleave="open = false" class="relative">
-							<a @mouseover="open = true"
-								class="text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover navbar-item w-full">
-								Support Us
-								<svg xmlns="http://www.w3.org/2000/svg" width="14px" height="14px" fill="none"
-									viewBox="0 0 24 24" stroke="currentColor" class="mt-1">
-									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-										d="M19 9l-7 7-7-7"></path>
-								</svg>
-							</a>
-							<div x-show="open"
-								class="z-20 absolute -left-1 w-[7.5rem] py-2 bg-gray-100 rounded-md shadow-xl">
-								<a href="volunteer.html"
-									class="block px-4 py-2 text-base text-gray-700 hover:bg-gray-400 hover:text-white">Become
-									a Volunteer</a>
-							</div>
-						</div>
+						<a
+							href="./volunteer.html"
+							class="text-custom-heading font-bold  underline-offset-4 turn-red-hover navbar-item"
+							>Support Us</a
+						>
 					</li>
 					<li>
 						<a href="./reportstary.html"
