--- a/volunteer.html
+++ b/volunteer.html
@@ -85,26 +85,10 @@
                             class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Donate
                             Animals</a></li>
                     <li>
-                        <div x-data="{ open: false }" @mouseleave="open = false" class="relative">
-                            <a @mouseover="open = true"
-                                class="p-3 text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover navbar-item cursor-pointer">
-                                Support Us
-                                <svg xmlns="http://www.w3.org/2000/svg" width="18px" height="18px" fill="none"
-                                    viewBox="0 0 24 24" stroke="currentColor" class="mt-1">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M19 9l-7 7-7-7"></path>
-                                </svg>
-                            </a>
-
-                            <div x-show="open"
-                                class="z-20 absolute -left-1 w-[7.5rem] py-2 bg-gray-100 rounded-md shadow-xl">
-
-                                <a href="volunteer.html"
-                                    class=" block px-4 py-2 text-sm text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white">Become
-                                    a Volunteer</a>
-
-                            </div>
-                        </div>
+                        <a
+                            href="./volunteer.html"
+                            class="text-custom-heading font-bold  underline-offset-4 turn-red-hover navbar-item"
+                            >Support Us</a>
                     </li>
                     <li><a href="reportstary.html"
                             class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">SOS
